# market-research-crew

./: README.md  app.py  pyproject.toml  requirements.txt
reports/: report.md
src/market_research_crew/: crew.py  main.py
