[project]
name = "market_research_crew"
version = "0.1.0"
description = "market-research-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
market_research_crew = "market_research_crew.main:run"
run_crew = "market_research_crew.main:run"
train = "market_research_crew.main:train"
replay = "market_research_crew.main:replay"
test = "market_research_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
